Atualização de chaves de API e correção de instruções do README

--- a/public/index.html
+++ b/public/index.html
@@ -323,7 +323,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGjNnTxy2WjE_Srf0W8PlEzl_COym3_ho&callback=inicializarMapa"></script>
+    const API_KEY = "" ;
+    src="https://maps.googleapis.com/maps/api/js?key=${API_KEY}callback=inicializarMapa"></script>
 
 
    
